<resources>
    <string name="app_name">ApplicationVisite</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Première page</string>
    <string name="second_fragment_label">Seconde page</string>
    <string name="next">Suivant</string>
    <string name="previous">Précédent</string>

    <string name="hello_first_fragment">JE SUIS LA PREMIERE PAGE</string>
    <string name="hello_second_fragment">JE SUIS LA SECONDE PAGE</string>

    <string name="welcome_message">Bienvenue à :</string>
    <string name="descover">Découvrir le campus</string>
    <string name="namedetailview">Plus de détails</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_bat_name">Batiment A</string>
    <string name="item_bat_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="item_bat_lienvideo">iut-montpellier-sete.edu.umontpellier.fr</string>
    <string name="info_scan_qrcode">Scannez un qr code pour découvrir plus d\'informations</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tutoriel_text">Appuillez sur le bouton en bas de l\'écran pour scanner un Qr code se situant à proximité des centres d\'interet du site de l\'iut de montpellier.</string>
    <string name="title_description">Description</string>
    <string name="title_lien_utiles">Liens Utiles</string>
    <string name="title_lieux_dinteret">Lieux d\'interêts</string>
    <string name="item_dep_name">Département Informatique</string>
    <string name="item_al_name">Cafétéria Du Batiment A</string>
    <string name="title_video">Vidéo de présentation</string>
    <string name="title_horaires">Horaires</string>
    <string name="item_al_horaires">Ouvert de 11h à 13h30</string>
    <string name="item_al_utiles">crous.fr</string>
    <string name="title_visiteguidee">Batiments visités</string>
    <string name="bat_pourcentage">batiments restants :</string>
    <string name="content_visiteguidee">Batiment suivant le plus proche</string>
    <string name="bat_name">Batiment a</string>
    <string name="title_objetifs">Objectifs :</string>
    <string name="title_organisation">Organisation de la formation</string>
    <string name="title_lien_contact">Contact</string>
    <string name="title_candidature">Candidatures</string>
    <string name="item_dep_plaquette">Télécharger\nla plaquette complette</string>
    <string name="bat_visite_restant">Aucun</string>
</resources>