<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailDepartementActivity">


    <ImageButton
        android:id="@+id/button_close2"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_margin="@dimen/margin_default"
        android:contentDescription="fermer"
        android:src="@drawable/ic_close"
        app:layout_constraintBottom_toTopOf="@+id/scroll"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/rouge_logo"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/namedetailview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/namedetailview"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".DetailBatimentActivity"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_dep_name"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_default"
                android:textColor="@color/noir_logo"
                android:text="@string/item_dep_name" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/img_demo_info"
                android:layout_margin="@dimen/margin_default"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_default"
                android:text="@string/title_description"
                android:textColor="@color/noir_logo"
                android:textSize="18sp"
                />

            <TextView
                android:id="@+id/text_bat_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:textColor="@color/noir_logo"
                android:textSize="15sp"
                android:text="@string/item_bat_description"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_default"
                android:text="@string/title_lien_utiles"
                android:textColor="@color/noir_logo"
                android:textSize="18sp"
                />

            <TextView
                android:id="@+id/text_bat_lienvideo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:autoLink="web"
                android:clickable="true"
                android:text="@string/item_bat_lienvideo"
                android:textColor="@color/bleu_logo"
                android:focusable="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_default"
                android:text="@string/title_lieux_dinteret"
                android:textColor="@color/noir_logo"
                android:textSize="18sp"
                />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>