<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.BatimentFragment"
    android:orientation="vertical">


    <TextView
        android:id="@+id/text_bat_name"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_default"
        android:text="@string/item_bat_name" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/img_bat_a"
        android:layout_margin="@dimen/margin_default"
        />

    <TextView
        android:id="@+id/text_bat_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_default"
        android:text="@string/item_bat_description"
        />

    <TextView
        android:id="@+id/text_bat_lienvideo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_default"
        android:text="@string/item_bat_lienvideo"
        />

</LinearLayout>