<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailBatimentActivity">


    <ImageButton
        android:id="@+id/button_close2"
        android:layout_width="45dp"
        android:layout_height="48dp"
        android:layout_margin="@dimen/margin_default"
        android:contentDescription="fermer"
        android:src="@drawable/ic_close"
        app:layout_constraintBottom_toTopOf="@+id/scroll"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/rouge_logo"
        tools:ignore="MissingConstraints,ImageContrastCheck" />


    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".DetailBatimentActivity"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_bat_name"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_default"
                android:textColor="@color/noir_logo"
                android:text="@string/item_bat_name" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_margin="@dimen/margin_default"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_default"
                android:text="@string/title_description"
                android:textColor="@color/noir_logo"
                android:textSize="18sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/text_bat_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:textColor="@color/noir_logo"
                android:textSize="15sp"
                android:text="@string/item_bat_description"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_default"
                android:text="@string/title_lien_utiles"
                android:textColor="@color/noir_logo"
                android:textSize="18sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/text_bat_lienvideo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:autoLink="web"
                android:clickable="true"
                android:text="@string/item_bat_lienvideo"
                android:textColor="@color/bleu_logo"
                android:focusable="true" />
            <FrameLayout
                android:id="@+id/flbatimentview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/title_departements"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/padding_default"
                    android:text="Département(s)"
                    android:textColor="@color/noir_logo"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/flbatimentview2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >
            <LinearLayout
                android:id="@+id/container_departements"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="250dp"
                tools:context=".DetailBatimentActivity">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_margin="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
            </FrameLayout>


            <FrameLayout android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".FooterFragment">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/grey"
                    android:paddingTop="@dimen/padding_default"
                    android:paddingBottom="@dimen/padding_default">

                    <TextView
                        android:id="@+id/nb_bat_visited"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/padding_default"
                        android:text="@string/title_visiteguidee"
                        android:textColor="@color/noir_logo"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/progressBarnull"
                        tools:ignore="MissingConstraints" />

                    <TextView
                        android:id="@+id/titlebatrestant"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingTop="15dp"
                        android:text="@string/bat_pourcentage"
                        android:textColor="@color/noir_logo"
                        android:textSize="13sp"
                        android:textStyle="italic"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/nb_bat_visited"
                        tools:ignore="MissingConstraints" />

                    <TextView
                        android:id="@+id/text_bat_restant"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingTop="15dp"
                        android:text="@string/bat_visite_restant"
                        android:textColor="@color/noir_logo"
                        android:textSize="13sp"
                        android:textStyle="italic"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/titlebatrestant" />


                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/padding_default"
                        android:text="@string/content_visiteguidee"
                        android:textAlignment="center"
                        android:textColor="@color/noir_logo"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/img_batiment_reco"
                        android:layout_width="200dp"
                        android:layout_height="100dp"
                        android:src="@drawable/img_bat_a"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView8" />

                    <TextView
                        android:id="@+id/batSuivant_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/padding_default"
                        android:text="@string/bat_name"
                        android:textColor="@color/noir_logo"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/img_batiment_reco" />

                    <ProgressBar
                        android:id="@+id/progressBarnull"
                        android:paddingTop="@dimen/padding_default"
                        android:paddingBottom="@dimen/padding_default"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/batSuivant_name" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </FrameLayout>


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>